=====
- orm
  - Fixed bug whereby a non-"mutable" attribute modified event
    which occurred on an object that was clean except for
    preceding mutable attribute changes would fail to strongly
    reference itself in the identity map. This would cause the
    object to be garbage collected, losing track of any changes
    that weren't previously saved in the "mutable changes"
    dictionary.

  - "innerjoin" flag doesn't take effect along the chain
    of joinedload() joins if a previous join in that chain
    is an outer join, thus allowing primary rows without
    a referenced child row to be correctly returned
    in results.  [ticket:1954]

  - Fixed bug regarding "subqueryload" strategy whereby
    strategy would fail if the entity was an aliased()
    construct.  [ticket:1964]

  - Fixed indexing of Query objects by -1. It was erroneously
    transformed to the empty slice -1:0 that resulted in
    IndexError. [ticket:1968]

  - The mapper argument "primary_key" can be passed as a 
    single column as well as a list or tuple.  [ticket:1971]
    The documentation examples that illustrated it as a 
    scalar value have been changed to lists.  

  - Added active_history flag to relationship()
    and column_property(), forces attribute events to
    always load the "old" value, so that it's available to
    attributes.get_history(). [ticket:1961]
    
  - active_history flag also added to composite(). 
    The flag has no effect in 0.6, but is instead 
    a placeholder flag for forwards compatibility,
    as it will be needed in 0.7 for composites.
    [ticket:1976]

  - Query.get() will raise if the number of params
    in a composite key is too large, as well as too 
    small. [ticket:1977]

  - Backport of "optimized get" fix from 0.7,
    improves the generation of joined-inheritance
    "load expired row" behavior.  [ticket:1992]

- sql
  - Fixed operator precedence rules for multiple
    chains of a single non-associative operator.